refactor: remove duplicate code and reuse profile service