@@ -5,6 +5,7 @@ import com.rattatarr.rattatarr.models.dtos.responses.*;
 import com.rattatarr.rattatarr.repositories.ProfilesRepository;
 import com.rattatarr.rattatarr.services.helpers.MediaItemViewHelper;
 import com.rattatarr.rattatarr.specifications.StatisticsSpecifications;
+import com.rattatarr.rattatarr.utils.AsyncEntityQueryRunner;
 import com.rattatarr.rattatarr.utils.ValueResolver;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityManagerFactory;
@@ -21,7 +22,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executor;
-import java.util.function.Function;
 
 @Service
 public class YearRewindService {
@@ -29,17 +29,20 @@ public class YearRewindService {
 
     private final EntityManagerFactory entityManagerFactory;
     private final ProfilesRepository profilesRepository;
-    private final Executor statisticsExecutor;
+    private final AsyncEntityQueryRunner queryRunner;
+    private final ProfileStatisticsService profileStatisticsService;
     private final MediaItemViewHelper mediaItemViewHelper;
 
     public YearRewindService(
             EntityManagerFactory entityManagerFactory,
             ProfilesRepository profilesRepository,
             @Qualifier("statisticsExecutor") Executor statisticsExecutor,
+            ProfileStatisticsService profileStatisticsService,
             MediaItemViewHelper mediaItemViewHelper) {
         this.entityManagerFactory = entityManagerFactory;
         this.profilesRepository = profilesRepository;
-        this.statisticsExecutor = statisticsExecutor;
+        this.queryRunner = new AsyncEntityQueryRunner(entityManagerFactory, statisticsExecutor, logger);
+        this.profileStatisticsService = profileStatisticsService;
         this.mediaItemViewHelper = mediaItemViewHelper;
     }
 
@@ -61,47 +64,47 @@ public class YearRewindService {
         Instant to = LocalDate.of(year + 1, 1, 1).atStartOfDay(ZoneOffset.UTC).toInstant();
 
         CompletableFuture<OverallStatsDTO> overallFuture =
-                query("overallStats", em -> getOverallStats(em, profileId, from, to));
+                queryRunner.query("overallStats", em -> profileStatisticsService.computeOverallStats(em, profileId, from, to));
         CompletableFuture<List<RatingDistributionDTO>> distributionFuture =
-                query("ratingDistribution", em -> getRatingDistribution(em, profileId, from, to));
+                queryRunner.query("ratingDistribution", em -> profileStatisticsService.computeRatingDistribution(em, profileId, from, to));
         CompletableFuture<List<RatingDistributionDTO>> distributionByIntegerFuture =
-                query("ratingDistributionByInteger", em -> getRatingDistributionByInteger(em, profileId, from, to));
+                queryRunner.query("ratingDistributionByInteger", em -> profileStatisticsService.computeRatingDistributionByInteger(em, profileId, from, to));
         CompletableFuture<List<MediaTypeBreakdownDTO>> mediaTypeFuture =
-                query("mediaTypeBreakdown", em -> getMediaTypeBreakdown(em, profileId, from, to));
+                queryRunner.query("mediaTypeBreakdown", em -> computeMediaTypeBreakdown(em, profileId, from, to));
         CompletableFuture<List<MediaTypeBreakdownDTO>> jellyfinMediaTypeFuture =
-                query("jellyfinMediaTypeBreakdown", em -> getJellyfinMediaTypeBreakdown(em, profileId, from, to));
+                queryRunner.query("jellyfinMediaTypeBreakdown", em -> profileStatisticsService.computeJellyfinMediaTypeBreakdown(em, profileId, from, to));
         CompletableFuture<List<GenreStatDTO>> genresByCountFuture =
-                query("topGenresByCount", em -> getTopGenresByCount(em, profileId, genresLimit, from, to));
+                queryRunner.query("topGenresByCount", em -> profileStatisticsService.computeTopGenresByCount(em, profileId, genresLimit, from, to));
         CompletableFuture<List<GenreStatDTO>> genresByScoreFuture =
-                query("topGenresByScore", em -> getTopGenresByScore(em, profileId, ratingThreshold, genresLimit, from, to));
+                queryRunner.query("topGenresByScore", em -> profileStatisticsService.computeTopGenresByScore(em, profileId, ratingThreshold, genresLimit, from, to));
         CompletableFuture<List<GenreStatDTO>> jellyfinGenresByCountFuture =
-                query("jellyfinTopGenresByCount", em -> getJellyfinTopGenresByCount(em, profileId, genresLimit, from, to));
+                queryRunner.query("jellyfinTopGenresByCount", em -> profileStatisticsService.computeJellyfinTopGenresByCount(em, profileId, genresLimit, from, to));
         CompletableFuture<List<PersonStatDTO>> directorsByCountFuture =
-                query("directorsByCount", em -> getFavoriteDirectors(em, profileId, minCount, directorsLimit, profileImageSize, StatisticsSpecifications.SortBy.COUNT, from, to));
+                queryRunner.query("directorsByCount", em -> profileStatisticsService.computeFavoriteDirectors(em, profileId, minCount, directorsLimit, profileImageSize, StatisticsSpecifications.SortBy.COUNT, from, to));
         CompletableFuture<List<PersonStatDTO>> directorsByScoreFuture =
-                query("directorsByScore", em -> getFavoriteDirectors(em, profileId, minCount, directorsLimit, profileImageSize, StatisticsSpecifications.SortBy.SCORE, from, to));
+                queryRunner.query("directorsByScore", em -> profileStatisticsService.computeFavoriteDirectors(em, profileId, minCount, directorsLimit, profileImageSize, StatisticsSpecifications.SortBy.SCORE, from, to));
         CompletableFuture<List<PersonStatDTO>> producersByCountFuture =
-                query("producersByCount", em -> getFavoriteProducers(em, profileId, minCount, producersLimit, profileImageSize, StatisticsSpecifications.SortBy.COUNT, from, to));
+                queryRunner.query("producersByCount", em -> profileStatisticsService.computeFavoriteProducers(em, profileId, minCount, producersLimit, profileImageSize, StatisticsSpecifications.SortBy.COUNT, from, to));
         CompletableFuture<List<PersonStatDTO>> producersByScoreFuture =
-                query("producersByScore", em -> getFavoriteProducers(em, profileId, minCount, producersLimit, profileImageSize, StatisticsSpecifications.SortBy.SCORE, from, to));
+                queryRunner.query("producersByScore", em -> profileStatisticsService.computeFavoriteProducers(em, profileId, minCount, producersLimit, profileImageSize, StatisticsSpecifications.SortBy.SCORE, from, to));
         CompletableFuture<List<PersonStatDTO>> actorsByCountFuture =
-                query("actorsByCount", em -> getFavoriteActors(em, profileId, minCount, actorsLimit, profileImageSize, StatisticsSpecifications.SortBy.COUNT, from, to));
+                queryRunner.query("actorsByCount", em -> profileStatisticsService.computeFavoriteActors(em, profileId, minCount, actorsLimit, profileImageSize, StatisticsSpecifications.SortBy.COUNT, from, to));
         CompletableFuture<List<PersonStatDTO>> actorsByScoreFuture =
-                query("actorsByScore", em -> getFavoriteActors(em, profileId, minCount, actorsLimit, profileImageSize, StatisticsSpecifications.SortBy.SCORE, from, to));
+                queryRunner.query("actorsByScore", em -> profileStatisticsService.computeFavoriteActors(em, profileId, minCount, actorsLimit, profileImageSize, StatisticsSpecifications.SortBy.SCORE, from, to));
         CompletableFuture<List<RatingActivityDTO>> monthlyFuture =
-                query("monthlyActivity", em -> getMonthlyActivity(em, profileId, from, to));
+                queryRunner.query("monthlyActivity", em -> getMonthlyActivity(em, profileId, from, to));
         CompletableFuture<List<DayOfWeekActivityDTO>> dayOfWeekFuture =
-                query("dayOfWeekActivity", em -> getDayOfWeekActivity(em, profileId, from, to));
+                queryRunner.query("dayOfWeekActivity", em -> profileStatisticsService.computeDayOfWeekActivity(em, profileId, from, to));
         CompletableFuture<List<DayOfWeekActivityDTO>> jellyfinDayOfWeekFuture =
-                query("jellyfinDayOfWeekActivity", em -> getJellyfinDayOfWeekActivity(em, profileId, from, to));
+                queryRunner.query("jellyfinDayOfWeekActivity", em -> profileStatisticsService.computeJellyfinDayOfWeekActivity(em, profileId, from, to));
         CompletableFuture<List<DecadeStatDTO>> decadesFuture =
-                query("decadePreferences", em -> getDecadePreferences(em, profileId, from, to));
+                queryRunner.query("decadePreferences", em -> profileStatisticsService.computeDecadePreferences(em, profileId, from, to));
         CompletableFuture<List<DecadeStatDTO>> jellyfinDecadesFuture =
-                query("jellyfinDecadePreferences", em -> getJellyfinDecadePreferences(em, profileId, from, to));
+                queryRunner.query("jellyfinDecadePreferences", em -> profileStatisticsService.computeJellyfinDecadePreferences(em, profileId, from, to));
         CompletableFuture<RuntimeStatsDTO> runtimeFuture =
-                query("runtimeStats", em -> getRuntimeStats(em, profileId, from, to));
+                queryRunner.query("runtimeStats", em -> getRuntimeStats(em, profileId, from, to));
         CompletableFuture<YearRewindHighlightsDTO> highlightsFuture =
-                query("highlights", em -> getHighlights(em, profileId, from, to));
+                queryRunner.query("highlights", em -> getHighlights(em, profileId, from, to));
 
         return new YearRewindResponseDTO(
                 year,
@@ -141,180 +144,27 @@ public class YearRewindService {
         }
     }
 
-    private <T> CompletableFuture<T> query(String label, Function<EntityManager, T> fn) {
-        return CompletableFuture.supplyAsync(() -> {
-            long start = System.nanoTime();
-            try (EntityManager em = entityManagerFactory.createEntityManager()) {
-                T result = fn.apply(em);
-                long elapsedMs = (System.nanoTime() - start) / 1_000_000;
-                logger.debug("Rewind query '{}' completed in {} ms", label, elapsedMs);
-                return result;
-            } catch (RuntimeException e) {
-                long elapsedMs = (System.nanoTime() - start) / 1_000_000;
-                logger.debug("Rewind query '{}' failed after {} ms", label, elapsedMs);
-                throw e;
-            }
-        }, statisticsExecutor);
-    }
 
-    private OverallStatsDTO getOverallStats(EntityManager em, UUID profileId, Instant from, Instant to) {
-        Tuple result = StatisticsSpecifications.queryOverallStats(em, profileId, from, to);
-
-        Long total = result.get("totalRatings", Long.class);
-        Double avg = result.get("averageRating", Double.class);
-        Float min = result.get("minRating", Float.class);
-        Float max = result.get("maxRating", Float.class);
-
-        return new OverallStatsDTO(
-                total != null ? total : 0L,
-                null,
-                ValueResolver.round2(avg),
-                min != null ? min : 0.0f,
-                max != null ? max : 0.0f);
-    }
-
-    private List<RatingDistributionDTO> getRatingDistribution(EntityManager em, UUID profileId, Instant from, Instant to) {
-        List<Tuple> results = StatisticsSpecifications.queryRatingDistribution(em, profileId, from, to);
-
-        long totalCount = results.stream().mapToLong(t -> t.get("count", Long.class)).sum();
-
-        List<RatingDistributionDTO> distribution = new ArrayList<>();
-        for (Tuple tuple : results) {
-            Long count = tuple.get("count", Long.class);
-            double percentage = totalCount > 0 ? (count * 100.0 / totalCount) : 0.0;
-            distribution.add(new RatingDistributionDTO(
-                    tuple.get("range", String.class),
-                    count,
-                    ValueResolver.round2(percentage)));
-        }
-        return distribution;
-    }
-
-    private List<RatingDistributionDTO> getRatingDistributionByInteger(EntityManager em, UUID profileId, Instant from, Instant to) {
-        List<Tuple> results = StatisticsSpecifications.queryRatingDistributionByInteger(em, profileId, from, to);
-
-        Map<Integer, Long> countByBucket = new LinkedHashMap<>();
-        for (Tuple tuple : results) {
-            Integer bucket = tuple.get("bucket", Integer.class);
-            Long count = tuple.get("count", Long.class);
-            if (bucket != null) {
-                countByBucket.put(bucket, count != null ? count : 0L);
-            }
-        }
-
-        long totalCount = countByBucket.values().stream().mapToLong(Long::longValue).sum();
-
-        List<RatingDistributionDTO> distribution = new ArrayList<>();
-        for (int i = 1; i <= 10; i++) {
-            long count = countByBucket.getOrDefault(i, 0L);
-            double percentage = totalCount > 0 ? (count * 100.0 / totalCount) : 0.0;
-            distribution.add(new RatingDistributionDTO(
-                    String.valueOf(i),
-                    count,
-                    ValueResolver.round2(percentage)));
-        }
-        return distribution;
-    }
-
-    private List<MediaTypeBreakdownDTO> getMediaTypeBreakdown(EntityManager em, UUID profileId, Instant from, Instant to) {
+    // Year-scoped media type breakdown: no library total enrichment needed.
+    private List<MediaTypeBreakdownDTO> computeMediaTypeBreakdown(EntityManager em, UUID profileId, Instant from, Instant to) {
         List<Tuple> results = StatisticsSpecifications.queryMediaTypeBreakdown(em, profileId, from, to);
-
         long totalRated = results.stream().mapToLong(t -> t.get("count", Long.class)).sum();
-
         List<MediaTypeBreakdownDTO> breakdown = new ArrayList<>();
         for (Tuple tuple : results) {
             Long count = tuple.get("count", Long.class);
             String mediaType = String.valueOf(tuple.get("mediaType"));
             double percentage = totalRated > 0 ? (count * 100.0 / totalRated) : 0.0;
             breakdown.add(new MediaTypeBreakdownDTO(
-                    mediaType,
-                    count,
-                    count,
+                    mediaType, count, count,
                     ValueResolver.round2(percentage),
                     ValueResolver.round2(tuple.get("averageRating", Double.class))));
         }
         return breakdown;
     }
 
-    private List<MediaTypeBreakdownDTO> getJellyfinMediaTypeBreakdown(EntityManager em, UUID profileId, Instant from, Instant to) {
-        List<Tuple> results = StatisticsSpecifications.queryJellyfinMediaTypeBreakdown(em, profileId, from, to);
-
-        long totalWatched = results.stream().mapToLong(t -> t.get("count", Long.class)).sum();
-
-        List<MediaTypeBreakdownDTO> breakdown = new ArrayList<>();
-        for (Tuple tuple : results) {
-            Long count = tuple.get("count", Long.class);
-            String mediaType = String.valueOf(tuple.get("mediaType"));
-            double percentage = totalWatched > 0 ? (count * 100.0 / totalWatched) : 0.0;
-            breakdown.add(new MediaTypeBreakdownDTO(
-                    mediaType,
-                    count,
-                    count,
-                    ValueResolver.round2(percentage),
-                    ValueResolver.round2(tuple.get("averageRating", Double.class))));
-        }
-        return breakdown;
-    }
-
-    private List<GenreStatDTO> getTopGenresByCount(EntityManager em, UUID profileId, int limit, Instant from, Instant to) {
-        return mapGenreTuples(StatisticsSpecifications.queryTopGenresBy(em, profileId, 0f, limit, StatisticsSpecifications.SortBy.COUNT, from, to));
-    }
-
-    private List<GenreStatDTO> getTopGenresByScore(EntityManager em, UUID profileId, float ratingThreshold, int limit, Instant from, Instant to) {
-        return mapGenreTuples(StatisticsSpecifications.queryTopGenresBy(em, profileId, ratingThreshold, limit, StatisticsSpecifications.SortBy.SCORE, from, to));
-    }
-
-    private List<GenreStatDTO> getJellyfinTopGenresByCount(EntityManager em, UUID profileId, int limit, Instant from, Instant to) {
-        return mapGenreTuples(StatisticsSpecifications.queryJellyfinTopGenresBy(em, profileId, limit, StatisticsSpecifications.SortBy.COUNT, from, to));
-    }
-
-    private List<GenreStatDTO> mapGenreTuples(List<Tuple> results) {
-        List<GenreStatDTO> genreStats = new ArrayList<>();
-        for (Tuple tuple : results) {
-            genreStats.add(new GenreStatDTO(
-                    tuple.get("genreName", String.class),
-                    tuple.get("count", Long.class),
-                    ValueResolver.round2(tuple.get("averageRating", Double.class))));
-        }
-        return genreStats;
-    }
-
-    private List<PersonStatDTO> getFavoriteDirectors(EntityManager em, UUID profileId, int minCount, int limit, String profileImageSize, StatisticsSpecifications.SortBy sortBy, Instant from, Instant to) {
-        return mapPersonTuples(
-                StatisticsSpecifications.queryFavoriteCrewByJob(em, profileId, "Director", minCount, limit, sortBy, from, to),
-                profileImageSize);
-    }
-
-    private List<PersonStatDTO> getFavoriteProducers(EntityManager em, UUID profileId, int minCount, int limit, String profileImageSize, StatisticsSpecifications.SortBy sortBy, Instant from, Instant to) {
-        return mapPersonTuples(
-                StatisticsSpecifications.queryFavoriteCrewByJob(em, profileId, "Producer", minCount, limit, sortBy, from, to),
-                profileImageSize);
-    }
-
-    private List<PersonStatDTO> getFavoriteActors(EntityManager em, UUID profileId, int minCount, int limit, String profileImageSize, StatisticsSpecifications.SortBy sortBy, Instant from, Instant to) {
-        return mapPersonTuples(
-                StatisticsSpecifications.queryFavoriteActors(em, profileId, minCount, limit, sortBy, from, to),
-                profileImageSize);
-    }
-
-    private List<PersonStatDTO> mapPersonTuples(List<Tuple> results, String profileImageSize) {
-        List<PersonStatDTO> people = new ArrayList<>();
-        for (Tuple tuple : results) {
-            String rawPath = tuple.get("profilePathUrl", String.class);
-            String imageUrl = rawPath != null ? mediaItemViewHelper.buildUrlFromPath(rawPath, profileImageSize) : null;
-            people.add(new PersonStatDTO(
-                    tuple.get("personId", UUID.class),
-                    tuple.get("name", String.class),
-                    imageUrl,
-                    ValueResolver.round2(tuple.get("averageRating", Double.class)),
-                    tuple.get("itemCount", Long.class)));
-        }
-        return people;
-    }
-
+    // Returns all months ASC with no limit (unlike the all-time version: last 12 DESC).
     private List<RatingActivityDTO> getMonthlyActivity(EntityManager em, UUID profileId, Instant from, Instant to) {
         List<Tuple> results = StatisticsSpecifications.queryMonthlyActivityForYear(em, profileId, from, to);
-
         List<RatingActivityDTO> activity = new ArrayList<>();
         for (Tuple tuple : results) {
             activity.add(new RatingActivityDTO(
@@ -325,58 +175,13 @@ public class YearRewindService {
         return activity;
     }
 
-    private List<DayOfWeekActivityDTO> getDayOfWeekActivity(EntityManager em, UUID profileId, Instant from, Instant to) {
-        List<Tuple> results = StatisticsSpecifications.queryDayOfWeekActivity(em, profileId, from, to);
-        return mapDayOfWeekTuples(results);
-    }
-
-    private List<DayOfWeekActivityDTO> getJellyfinDayOfWeekActivity(EntityManager em, UUID profileId, Instant from, Instant to) {
-        List<Tuple> results = StatisticsSpecifications.queryJellyfinDayOfWeekActivity(em, profileId, from, to);
-        return mapDayOfWeekTuples(results);
-    }
-
-    private List<DayOfWeekActivityDTO> mapDayOfWeekTuples(List<Tuple> results) {
-        String[] dayNames = {"Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"};
-        List<DayOfWeekActivityDTO> activity = new ArrayList<>();
-        for (Tuple tuple : results) {
-            String dayNum = tuple.get("dayOfWeek", String.class);
-            if (dayNum != null) {
-                activity.add(new DayOfWeekActivityDTO(dayNames[Integer.parseInt(dayNum)],
-                        tuple.get("count", Long.class)));
-            }
-        }
-        return activity;
-    }
-
-    private List<DecadeStatDTO> getDecadePreferences(EntityManager em, UUID profileId, Instant from, Instant to) {
-        return mapDecadeTuples(StatisticsSpecifications.queryDecadePreferences(em, profileId, from, to));
-    }
-
-    private List<DecadeStatDTO> getJellyfinDecadePreferences(EntityManager em, UUID profileId, Instant from, Instant to) {
-        return mapDecadeTuples(StatisticsSpecifications.queryJellyfinDecadePreferences(em, profileId, from, to));
-    }
-
-    private List<DecadeStatDTO> mapDecadeTuples(List<Tuple> results) {
-        List<DecadeStatDTO> decadeStats = new ArrayList<>();
-        for (Tuple tuple : results) {
-            decadeStats.add(new DecadeStatDTO(
-                    tuple.get("decade", Integer.class),
-                    tuple.get("count", Long.class),
-                    ValueResolver.round2(tuple.get("averageRating", Double.class))));
-        }
-        return decadeStats;
-    }
-
     private RuntimeStatsDTO getRuntimeStats(EntityManager em, UUID profileId, Instant from, Instant to) {
-        Tuple result = StatisticsSpecifications.queryRuntimeStatsForPeriod(em, profileId, from, to);
-
+        Tuple result = StatisticsSpecifications.queryRuntimeStats(em, profileId, from, to);
         Double avg = result.get("averageRuntime", Double.class);
         Integer longest = result.get("longestRuntime", Integer.class);
         Integer shortest = result.get("shortestRuntime", Integer.class);
-
         long movieTotal = StatisticsSpecifications.queryMoviesTotalRuntime(em, profileId, from, to);
         long seriesTotal = StatisticsSpecifications.querySeriesRuntimeTotal(em, profileId, from, to);
-
         return new RuntimeStatsDTO(
                 avg != null ? (int) Math.round(avg) : 0,
                 movieTotal + seriesTotal,
@@ -403,8 +208,8 @@ public class YearRewindService {
         String busiestDay = null;
         Long busiestDayCount = null;
         if (!busiestDayResult.isEmpty()) {
-            busiestDay = busiestDayResult.get(0).get("date", String.class);
-            busiestDayCount = busiestDayResult.get(0).get("count", Long.class);
+            busiestDay = busiestDayResult.getFirst().get("date", String.class);
+            busiestDayCount = busiestDayResult.getFirst().get("count", Long.class);
         }
 
         List<String> watchDates = StatisticsSpecifications.queryDistinctWatchDates(em, profileId, from, to);
@@ -441,25 +246,25 @@ public class YearRewindService {
 
     private YearRewindHighlightItemDTO mapRatingHighlightItem(List<Tuple> results) {
         if (results.isEmpty()) return null;
-        Tuple tuple = results.get(0);
+        Tuple tuple = results.getFirst();
         String rawPoster = tuple.get("posterImageUrl", String.class);
         return new YearRewindHighlightItemDTO(
                 tuple.get("title", String.class),
                 rawPoster != null ? mediaItemViewHelper.buildUrlFromPath(rawPoster, "w342") : null,
                 tuple.get("rating", Float.class),
-                tuple.get("eventAt", java.time.Instant.class),
+                tuple.get("eventAt", Instant.class),
                 String.valueOf(tuple.get("mediaType")));
     }
 
     private YearRewindHighlightItemDTO mapWatchHighlightItem(List<Tuple> results) {
         if (results.isEmpty()) return null;
-        Tuple tuple = results.get(0);
+        Tuple tuple = results.getFirst();
         String rawPoster = tuple.get("posterImageUrl", String.class);
         return new YearRewindHighlightItemDTO(
                 tuple.get("title", String.class),
                 rawPoster != null ? mediaItemViewHelper.buildUrlFromPath(rawPoster, "w342") : null,
                 null,
-                tuple.get("eventAt", java.time.Instant.class),
+                tuple.get("eventAt", Instant.class),
                 String.valueOf(tuple.get("mediaType")));
     }
 
@@ -468,8 +273,8 @@ public class YearRewindService {
 
         DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy-MM-dd");
 
-        String streakStart = sortedDates.get(0);
-        String streakEnd = sortedDates.get(0);
+        String streakStart = sortedDates.getFirst();
+        String streakEnd = sortedDates.getFirst();
         int streakLen = 1;
 
         String bestStart = streakStart;
